# WMS.Angular/src/app/pages/reports/receiving-reconciliation-report/receiving-reconciliation.routes.ts
@@ -1,0 +1,12 @@
+import type { Routes } from "@angular/router";
+import { ReceivingReconciliationReportComponent } from "./receiving-reconciliation-report.component";
+
+export const reconcillationRoutes: Routes = [
+  {
+    path: "",
+    component: ReceivingReconciliationReportComponent,
+    data: {
+      breadcrumb: "Receiving Reconciliation Report",
+    },
+  },
+];
